@@ -1,0 +1,7 @@
+#ifndef _PORT_H
+#define _PORT_H
+
+extern size_t strlcpy(char *, const char *, size_t);
+extern int sig2str(int, char *);
+
+#endif
