@@ -1,0 +1,66 @@
+/*
+ * CDDL HEADER START
+ *
+ * The contents of this file are subject to the terms of the
+ * Common Development and Distribution License, Version 1.0 only
+ * (the "License").  You may not use this file except in compliance
+ * with the License.
+ *
+ * You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
+ * or http://www.opensolaris.org/os/licensing.
+ * See the License for the specific language governing permissions
+ * and limitations under the License.
+ *
+ * When distributing Covered Code, include this CDDL HEADER in each
+ * file and include the License file at usr/src/OPENSOLARIS.LICENSE.
+ * If applicable, add the following below this CDDL HEADER, with the
+ * fields enclosed by brackets "[]" replaced with your own identifying
+ * information: Portions Copyright [yyyy] [name of copyright owner]
+ *
+ * CDDL HEADER END
+ */
+/*	Copyright (c) 1984, 1986, 1987, 1988, 1989 AT&T	*/
+/*	  All Rights Reserved  	*/
+
+
+/*
+ * Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+ * Use is subject to license terms.
+ */
+
+#ifndef _SYS_ELFTYPES_H
+#define	_SYS_ELFTYPES_H
+
+#pragma ident	"%Z%%M%	%I%	%E% SMI"	/* SVr4.0 1.1	*/
+
+#include <sys/feature_tests.h>
+
+#ifdef	__cplusplus
+extern "C" {
+#endif
+
+#if defined(_LP64) || defined(_I32LPx)
+typedef unsigned short		Elf32_Half;
+#else
+typedef unsigned short		Elf32_Half;
+#endif
+
+#if defined(_LP64)
+typedef unsigned short		Elf64_Half;
+typedef long			Elf64_Sxword;
+typedef	unsigned long		Elf64_Xword;
+typedef unsigned long		Elf64_Lword;
+typedef unsigned long		Elf32_Lword;
+#elif defined(_LONGLONG_TYPE)
+typedef unsigned short		Elf64_Half;
+typedef long long		Elf64_Sxword;
+typedef	unsigned long long	Elf64_Xword;
+typedef	unsigned long long	Elf64_Lword;
+typedef unsigned long long	Elf32_Lword;
+#endif
+
+#ifdef	__cplusplus
+}
+#endif
+
+#endif	/* _SYS_ELFTYPES_H */
