@@ -32,7 +32,7 @@
 #include <sys/types.h>
 #include <sys/stat.h>
 
-#define __USE_ATFILE
+#define __USE_ATFILE 
 #include <sys/fcntl.h>
 
 #include <sys/sysmacros.h>
